# bevy-starter

./: Cargo.toml  readme.md
.cargo/: config.toml
.github/workflows/: bevy.yml  bevy.yml.template  ci.yaml
src/: camera.rs  default.rs  development.rs  diagnostic.rs  lib.rs  main.rs  physics.rs  schedule.rs  state.rs  utils.rs  window.rs
src/example/: mod.rs  people.rs
src/game/: mod.rs
src/people/: components.rs  mod.rs  plugins.rs  systems.rs  tests.rs
