[package]
name = "bevy-starter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = "0.16.0"

# Improve Runtime Performance
# https://bevyengine.org/learn/quick-start/getting-started/setup/#improve-runtime-performance-optional
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# Compile low-severity logs out of web builds for performance.
# https://github.com/trubusoft/bevy-starter-alt/blob/6f5430d0cec49a9d31614c8f93b85bcb82474fcb/Cargo.toml#L13
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }
